<resources>
    <string name="app_name">Assignment5</string>
    <string name="blank">___</string>
    <string name="search">Search</string>
    <string name="pokmon_name_or_id">Pokmon Name or ID</string>
    <string name="number">Number</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="base_xp">Base XP</string>
    <string name="ability">Ability</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="empty">___</string>
</resources>