<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_pokeBXP"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokeHei" />

    <TextView
        android:id="@+id/tv_pokeAbility"
        android:layout_width="170dp"
        android:layout_height="39dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokeAbility" />

    <TextView
        android:id="@+id/tv_pokeHei"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="16dp"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokeWei" />

    <TextView
        android:id="@+id/tv_pokeWei"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="16dp"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokeNum" />

    <ImageView
        android:id="@+id/pokemonImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/pokemonName"
        tools:srcCompat="@tools:sample/avatars"
        android:src="@drawable/ic_launcher_background"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="162dp"
        android:layout_height="556dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pokmon_name_or_id"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pokemonName"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <TextView
        android:id="@+id/pokeNumber"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="20dp"
        android:text="@string/number"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_pokeNum"
        app:layout_constraintTop_toBottomOf="@+id/pokemonImage" />

    <TextView
        android:id="@+id/pokeWeight"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="20dp"
        android:text="@string/weight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_pokeWei"
        app:layout_constraintTop_toBottomOf="@+id/pokeNumber" />

    <TextView
        android:id="@+id/pokeHeight"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="20dp"
        android:text="@string/height"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_pokeHei"
        app:layout_constraintTop_toBottomOf="@+id/pokeWeight" />

    <TextView
        android:id="@+id/pokeBaseXP"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="20dp"
        android:text="@string/base_xp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_pokeBXP"
        app:layout_constraintTop_toBottomOf="@+id/pokeHeight" />

    <TextView
        android:id="@+id/pokeAbility"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="66dp"
        android:text="@string/ability"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokeBXP" />

    <TextView
        android:id="@+id/tv_pokeNum"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="16dp"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonImage" />
</androidx.constraintlayout.widget.ConstraintLayout>